--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1902,7 +1902,7 @@
 		border-radius: 0.35em;
 		color: #fff !important;
 		text-decoration: none;
-		padding: 0.75em 2.5em 0.75em 2.5em;
+		padding: 0.2em 1.5em;
 		background-color: #8ebebc;
 		border: 0;
 		cursor: pointer;
